<resources>
    <string name="app_name">ReportApps</string>
    <string name="title_activity_maps">Map</string>
    <string name="nama">Nama</string>
    <string name="ktp">Nomor KTP</string>
    <string name="alamat">Alamat</string>
    <string name="noHP">Nomor HP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ulang_password">Ulangi Password</string>
    <string name="username">Username</string>
    <string name="txtdaftarsipil">DAFTAR SEBAGAI SIPIL</string>
    <string name="txtdaftaranggota">DAFTAR SEBAGAI ANGGOTA</string>
    <string name="nrp">NRP</string>
    <string name="pangkat">Pangkat</string>
    <string name="kesatuan">Kesatuan</string>
    <string name="laporan">Laporan</string>
    <string name="kantorpolisi">Kantor Polisi</string>
    <string name="video">Video</string>
    <string name="tugas">Tugas</string>
    <string name="poin">Poin</string>\
    <string name="akun">Akun</string>
    <string name="welcome">Selamat Datang</string>
    <string name="ketentuan">Ketentuan</string>
    <string name="thp_dev">Fitur ini masih tahap pengembangan</string>
    <string name="login_anggota">Login Sebagai Anggota</string>
    <string name="login_sipil">Login Sebagai Sipil</string>
    <string name="login">LOGIN</string>
    <string name="daftar">DAFTAR</string>
    <string name="lupa_pass">Lupa Password</string>
    <string name="belum_daftar">Belum punya akun ?</string>
    <string name="klik_disini">KLIK DISINI</string>
    <string name="bidang">Bidang</string>
    <string name="perihal">Perihal</string>
    <string name="fakta">Fakta-Fakta</string>
    <string name="laporan_info">LAPORAN - INFORMASI</string>
    <string name="pendapat">Pendapat Pelapor</string>
    <string name="ambil_lokasi">Ambil Lokasi</string>
</resources>
