<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:gravity="center">
        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/id_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/text_slogan"
            android:layout_below="@+id/id_app"
            android:text="@string/login_anggota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <RelativeLayout
            android:id="@+id/rel1"
            android:layout_below="@+id/text_slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsigninshape">
            <EditText
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/nrp"
                android:textColorHint="#ffffff"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:singleLine="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/rel1"
            android:id="@+id/rel2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsigninshape">
            <EditText
                android:padding="5dp"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColorHint="#ffffff"
                android:imeActionId="6"
                android:layout_margin="10dp"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:singleLine="true" />
            <TextView
                android:id="@+id/shw_pass"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/ic_action_eye_closed"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/rel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/txtLupaPass"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/lupa_pass"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:layout_centerHorizontal="true" />
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btn_login"
                android:text="Login"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btnsigninshape" />
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"
                    android:text="@string/belum_daftar"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentBottom="true">
                </TextView>
                <Button
                    android:id="@+id/btn_daftar"
                    android:text="@string/klik_disini"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnsigninshape" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>